# 2d_game

./: .gitignore  CMakeLists.txt  main.cpp
files/: map.txt
headers/: Settings.cpp  Settings.h
headers/Animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h
headers/Bullet/: Bullet.cpp  Bullet.h
headers/Character/: Character.cpp  Character.h
headers/Controller/: Controller.cpp  Controller.h
headers/Enemy/: Clone.cpp  Clone.h  Clone.hpp  Enemy.hpp
headers/Entity/: Character.cpp  Character.h  Entity.cpp  Entity.h
headers/Game/: Game.cpp  Game.h  entityFactory.hpp
headers/Level/: Level.cpp  Level.h  entityFactory.hpp
headers/Map/: Map.cpp  Map.h
headers/Map/matrix/: matrix.h  matrix.tpp
headers/Modifier/: HealthBooster.cpp  HealthBooster.h  HealthBooster.hpp  Modifier.hpp
headers/Player/: Player.cpp  Player.h
headers/UI/: Message.cpp  Message.h  UI.cpp  UI.h  UI.hpp
